[gd_scene load_steps=3 format=3 uid="uid://lbqmnqo7w6yg"]

[ext_resource type="Theme" uid="uid://cyumy3xx60fnx" path="res://themes/theme_ui.tres" id="1_i7i7d"]
[ext_resource type="Script" path="res://scripts/option_cycler.gd" id="2_emysb"]

[node name="OptionCycler" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
theme = ExtResource("1_i7i7d")
theme_override_constants/separation = 10
script = ExtResource("2_emysb")

[node name="PrevButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "< Prev"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "???"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Next >"
